# gazebo-wam

./: .gitignore  README.md
src/wam_controllers/: CMakeLists.txt  package.xml
src/wam_description/: CMakeLists.txt  package.xml
src/wam_description/launch/: display.launch.py
src/wam_description/models/: arm.urdf.xacro  ball.urdf.xacro  common.urdf.xacro  components.urdf.xacro  hand.urdf.xacro  wam_ros2_control.urdf.xacro  wam_top.urdf.xacro
src/wam_description/robots/: barrett.urdf.xacro  wam4.urdf.xacro  wam4_stump.urdf.xacro  wam7.urdf.xacro  wam7.urdf.xacro.save  wam7_bhand.urdf.xacro  wam_4dof_wam_bhand.urdf.xacro  wam_7dof_wam_bhand.urdf.xacro
src/wam_gazebo/: CMakeLists.txt  package.xml
src/wam_gazebo/config/: ros2_controllers.yaml
src/wam_gazebo/launch/: gazebo.launch.py
src/wam_model_controller/: CMakeLists.txt  package.xml  plugin.xml
src/wam_model_controller/include/wam_model_controller/: wam_model_controller.hpp
src/wam_model_controller/src/: wam_model_controller.cpp
src/wam_motion_control/: CMakeLists.txt  package.xml
src/wam_motion_control/config/: cartesian_motion.yaml  joint_motion.yaml
src/wam_motion_control/launch/: cartesian_motion.launch.py  joint_motion.launch.py
src/wam_motion_control/src/: cartesian_motion.cpp  joint_motion.cpp
src/wam_moveit_config/: CMakeLists.txt  package.xml
src/wam_moveit_config/config/: joint_limits.yaml  kinematics.yaml  move_group.yaml  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml  trajectory_execution.yaml  wam.srdf
src/wam_moveit_config/launch/: move_group.launch.py  rviz.launch.py
src/wam_moveit_config/rviz/: wam.rviz
src/wam_pick_place/: CMakeLists.txt  package.xml
src/wam_pick_place/launch/: move_home.launch.py  move_to_pose.launch.py
src/wam_pick_place/src/: add_scene.cpp  move_home.cpp  move_to_pose.cpp
